2016-01-02  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/directive.c:
    Fixed "Warning[219] Invalid RAM location specified..." messages
    case of pic16l?f18857/877 processors.

  * gpasm/testsuite/test_all_processors:
    New test script.

  * libgputils/gpprocessor.c:
    Coff_type of the pic18lf47k40 bogus. (Microchip error in
    the MPLABX-3.15, original value is 0x0000.) Temporarily
    fixed to 0xFFFF.

2015-12-24  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/processor.c, gputils/gpdasm.c:
    Added the __CONFIG_START and the __CONFIG_END constants.

  * gputils/labelset.c, gputils/labelset.h:
    Code cosmetic.

2015-12-24  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx:
    Added the __IDLOCS_START and the __IDLOCS_END constants.

2015-12-24  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gphash.c:
    Removed an unnecessary pointer check.

  * gpasm/processor.c, gputils/gpdasm.c:
    Added the __IDLOCS_START and the __IDLOCS_END constants.

2015-12-22  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/p18l?f47k40.inc, libgputils/gpcfg-table.c:
    Fixed the Microchip bug: Renamed the nDEBUG to DEBUG, nXINST
    to XINST, nCLKOUTEN to CLKOUTEN, nPWRTE to PWRTE, nLPBOREN
    to LPBOREN, nCP to CP and nCPD to CPD.

2015-12-21  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpprocessor.c:
    bugfix: The 18f47k40 and 18lf47k40 have XINST config bit.
            18fxxk40 wrong access RAM split address.

2015-12-12  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * configure.ac, configure, doc/gputils.lyx:
    The version changed to 1.4.2 .

  * gpasm/cod.c, gplink/cod.c, gputils/dump.c, libgputils/gpcod.h:
    Use the COD_LS_SMOD_FLAG_x defines.

  * gpasm/lst.c, gpasm/preprocess.c:
    Use more const pointer.

  * gplink/gplink.h.in, gplink/lst.c:
    Changed a variable type from int to gp_boolean.
